--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "classnames": "^2.5.1",
@@ -46,6 +47,7 @@
     "customize-cra": "^1.0.0",
     "prettier": "3.3.3",
     "react-app-rewired": "^2.2.1",
-    "sass": "^1.80.4"
+    "sass": "^1.80.4",
+    "sass-loader": "^16.0.2"
   }
 }
